--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
@@ -9,7 +9,7 @@
 			(showRelatedInvoicesClicked)="showRelatedInvoices()"
 			(showInvoiceTransferClicked)="showInvoiceTransfer()"
 			(currentInvoiceChanged)="currentRelatedInvoiceIndex = $event"
-			(invoiceChanged)="markInvoiceChanged()"
+			(invoiceChanged)="markInvoiceChanged($event)"
 		>
 		</invoice-overview>
 	</div>
