--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -4095,6 +4095,12 @@ textarea.payer-details {
     background-color: rgba(204, 204, 204, 1);
 }
 
+.invoice-summary .credit-invoice-status,
+.related-invoice .credit-invoice-status {
+    color: #ffffff;
+    background-color: rgb(255, 190, 1);
+}
+
 .invoice-summary .related-invoices {
     font-weight: 400;
     font-style: normal;
