--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -4101,6 +4101,12 @@ textarea.payer-details {
     background-color: rgb(255, 190, 1);
 }
 
+.invoice-summary .reinstatement,
+.related-invoice .reinstatement {
+    color: #999999;
+    font-weight: 200;
+}
+
 .invoice-summary .related-invoices {
     font-weight: 400;
     font-style: normal;
