--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
@@ -5,7 +5,8 @@
 		<invoice-overview
 			[relatedInvoices]="relatedInvoices"
     		[currentRelatedInvoiceIndex]="currentRelatedInvoiceIndex"
-			[invoiceOperationsPageData]="pageData"
+            [invoiceOperationsPageData]="pageData"
+            [paginationOptions]="paginationOptions"
 			(showRelatedInvoicesClicked)="showRelatedInvoices()"
 			(showInvoiceTransferClicked)="showInvoiceTransfer()"
 			(currentInvoiceChanged)="currentRelatedInvoiceIndex = $event"
@@ -16,7 +17,8 @@
 	<div class="full-height" *ngIf="shouldShowRelatedInvoices()">
 		<related-invoices
 			[relatedInvoices]="relatedInvoices"
-			[invoiceOperationsPageData]="pageData"
+            [invoiceOperationsPageData]="pageData"
+            [paginationOptions]="paginationOptions"
 			(backToInvoiceOverviewClicked)="showInvoiceOverview()"
 			(relatedInvoiceIndexSelected)="selectRelatedInvoiceIndex($event)"
 		>
