--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -4107,6 +4107,11 @@ textarea.payer-details {
     font-weight: 200;
 }
 
+.invoice-summary .disabled,
+.related-invoice .disabled {
+    color: rgb(201, 215, 223);
+}
+
 .invoice-summary .related-invoices {
     font-weight: 400;
     font-style: normal;
