--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
@@ -11,6 +11,7 @@
 			(showInvoiceTransferClicked)="showInvoiceTransfer()"
 			(currentInvoiceChanged)="currentRelatedInvoiceIndex = $event"
 			(invoiceChanged)="markInvoiceChanged($event)"
+			(invoiceDeleted)="onInvoiceDeleted($event)"
 		>
 		</invoice-overview>
 	</div>
