--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/template/hotel-operations.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/template/hotel-operations.html
@@ -53,6 +53,7 @@
 	<invoice-operations-page class="full-height"
 		*ngIf="isInvoiceOperationsPage()"
 		[invoiceOperationsPageParam]="currentHotelOperationsPageParam"
+		(exit)="triggerOnExit()"
 		>
 	</invoice-operations-page>
 
