--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/related-invoices/template/related-invoices.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/related-invoices/template/related-invoices.html
@@ -9,8 +9,7 @@
 </div>
 <div class="related-invoices-list">
     <div class="related-invoice" *ngFor="let relatedInvoice of relatedInvoices; let i = index">
-        <i class="fa fa-trash related-invoice-button clickable" (click)="deleteInvoice(relatedInvoice)"></i>
-        <i *ngIf="canDownloadInvoice(relatedInvoice)" class="fa fa-download related-invoice-button m-r-8 clickable" (click)="downloadInvoice(relatedInvoice)"></i>
+        <i *ngIf="canDownloadInvoice(relatedInvoice)" class="fa fa-download related-invoice-button clickable" (click)="downloadInvoice(relatedInvoice)"></i>
         <div class="related-invoice-info clickable" (click)="selectRelatedInvoiceIndex(i)">
             <div class="related-invoice-title">
                 <span *ngIf="paginationOptions.displayPaginator">
