#522 Minor check in the invoice-overview

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
@@ -1,4 +1,4 @@
-<div class="invoice-overview">
+<div class="invoice-overview" *ngIf="currentInvoice">
     <div class="invoice-summary">
         <i [ngClass]="{'disabled': !paginationOptions.displayPaginator, 'clickable': paginationOptions.displayPaginator}"
             class="fa fa-angle-left cycle-related-invoices pull-left"
