[HotFix] Various fixes within the invoice transfer page

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
@@ -31,7 +31,8 @@
 		<invoice-transfer
 			[relatedInvoices]="relatedInvoices"
     		[currentRelatedInvoiceIndex]="currentRelatedInvoiceIndex"
-			[invoiceOperationsPageData]="pageData"
+            [invoiceOperationsPageData]="pageData"
+            (invoiceChanged)="markInvoiceChanged($event)"
 			(backToInvoiceOverviewClicked)="showInvoiceOverview()"
 		>
 		</invoice-transfer>
