--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-transfer/template/invoice-transfer.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-transfer/template/invoice-transfer.html
@@ -150,7 +150,7 @@
     </div>
 </div>
 <div class="invoice-transfer-footer m-t-24">
-    <button type="button" class="btn btn-primary m-l-8" (click)="transferItems()">
+    <button type="button" class="btn btn-primary m-l-8" (click)="transferItems()" [disabled]="!hasAtLeastOneTransientTransfer()">
         <i *ngIf="transferInProgress" class="fa fa-spinner fa-pulse"></i>
         {{ 'Transfer Items' | translate }}
     </button>
