--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
@@ -125,7 +125,8 @@
                     </td>
                     <td></td>
                     <td></td>
-                    <td>-{{ ccySymbol }}{{ payment.amount }}</td>
+                    <td *ngIf="payment.amount >= 0">-{{ ccySymbol }}{{ payment.amount }}</td>
+                    <td *ngIf="payment.amount < 0">{{ ccySymbol }}{{ payment.amount * (-1) }}</td>
                     <td></td>
                 </tr>
             </ng-container>
